# cogit

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  README.md
.cbm/: .gitignore
crates/cogit-cli/: Cargo.toml
crates/cogit-cli/src/: main.rs
crates/cogit-core/: Cargo.toml
crates/cogit-core/src/: bisect.rs  canonical.rs  error.rs  index.rs  lib.rs  maintenance.rs  objects.rs  refs.rs  repo.rs  rerere.rs  secrets.rs  store.rs  time.rs  verify.rs
crates/cogit-core/tests/: golden_vectors.rs  repo_workflow.rs  store_roundtrip.rs
deploy/: Dockerfile  docker-compose.yml
docs/: claim-modeling.md  glossary.md  invariants.md  (+7 more)
prototype/: pyproject.toml
prototype/benchmarks/: belief_bench.py
prototype/cogit/: __init__.py  bisect.py  canonical.py  cli.py  errors.py  index_state.py  maintenance.py  objects.py  refs.py  repo.py  rerere.py  secrets.py  store.py  verify.py
prototype/integrations/: README.md  analytics.py  claude_code_hook.py  derivation.py  health.py  lint.py  mcp_server.py  web_viewer.py
prototype/tests/: helpers.py  test_analytics.py  test_belief_bench.py  test_bisect.py  test_canonical.py  test_cli.py  test_concurrency.py  test_derivation.py  test_forward_compat.py  test_health.py  test_hook.py  test_lifecycle.py  test_lint.py  test_maintenance.py  test_mcp_server.py  test_objects.py  test_premises.py  test_refs.py  test_repo.py  test_rerere.py  test_search.py  test_secrets.py  test_store.py  test_ux.py  test_vectors.py  test_web_viewer.py  test_writer.py
prototype/tools/: gen_vectors.py
prototype/vectors/: object-vectors-v1.json
(+84 files in other folders)
